# rust-for-android-ios-flutter

./: README.md
android/: .project  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/rusty-android-lib/: .project  build.gradle
android/rusty-android-lib/src/main/: AndroidManifest.xml
flutter/: README.md  pubspec.yaml
flutter/android/: .project  build.gradle  settings.gradle
flutter/android/rusty-android-lib-release/: .project  build.gradle  rusty-android-lib-release.aar
flutter/android/src/main/: AndroidManifest.xml
flutter/example/: README.md  pubspec.yaml
flutter/example/android/app/: build.gradle
flutter/example/ios/Runner/: Info.plist
flutter/example/ios/Runner.xcodeproj/: project.pbxproj
flutter/example/lib/: main.dart
flutter/example/test/: widget_test.dart
flutter/ios/: rusty_flutter_lib.podspec
flutter/ios/Classes/: RustyFlutterLibPlugin.h  RustyFlutterLibPlugin.m  SwiftRustyFlutterLibPlugin.swift
flutter/lib/: rusty_flutter_lib.dart
flutter/test/: rusty_flutter_lib_test.dart
ios/rusty-ios-classic/rusty-ios-classic/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ios/rusty-ios-classic/rusty-ios-classic.xcodeproj/: project.pbxproj
ios/rusty-ios/rusty-ios/: AppDelegate.swift  ContentView.swift  SceneDelegate.swift
ios/rusty-ios/rusty-ios.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/scripts/: android_build.sh  install_targets.sh  ios_build.sh
rust/src/: android.rs  lib.rs
(+20 files in other folders)
